tests/error/modifier_errors/dagger_branch2.err
Error: Invalid expression in dagger (at $FILE:8:12)
  | 
6 | def test() -> None:
7 |     with dagger:
8 |         x = 1 if 2 > 46 else 0
  |             ^^^^^^^^^^^^^^^^^^ Branch found in a dagger context

Note:
  | 
6 | def test() -> None:
7 |     with dagger:
  |          ------ dagger modifier is used here

Guppy compilation failed due to 1 previous error
